# GPUPrefixSums

./: .gitattributes  LICENSE  README.md
GPUPrefixSumsCUDA/: ChainedScanDecoupledLookback.cu  ChainedScanDecoupledLookback.cuh  ChainedScanDecoupledLookbackDispatcher.cuh  CubDispatcher.cuh  EmulatedDeadlocking.cu  EmulatedDeadlocking.cuh  EmulatedDeadlockingDispatcher.cuh  GPUPrefixSumsCUDA.cu  GPUPrefixSumsCUDA.sln  GPUPrefixSumsCUDA.vcxproj  LocalScan.cuh  ReduceThenScan.cu  ReduceThenScan.cuh  ReduceThenScanDispatcher.cuh  ScanCommon.cuh  UtilityKernels.cuh  Utils.cuh
GPUPrefixSumsD3D12/: .clang-format  CSDLDFKernels.h  CSDLKernels.h  ChainedScanDecoupledLookback.cpp  ChainedScanDecoupledLookback.h  ChainedScanDecoupledLookbackDecoupledFallback.cpp  ChainedScanDecoupledLookbackDecoupledFallback.h  ComputeKernelBase.h  ComputeShader.h  EmulatedDeadlock.cpp  EmulatedDeadlock.h  EmulatedDeadlockKernels.h  GPUPrefixSumBase.h  GPUPrefixSummer.h  GPUPrefixSums.h  GPUPrefixSumsD3D12.cpp  GPUPrefixSumsD3D12.sln  GPUPrefixSumsD3D12.vcxproj  GPUPrefixSumsD3D12.vcxproj.filters  RTSKernels.h  ReduceThenScan.cpp  ReduceThenScan.h  Survey.cpp  Survey.h  SurveyKernelBase.h  SurveyKernels.h  UtilityKernels.h  Utils.h  pch.cpp  pch.h
GPUPrefixSumsD3D12/Shaders/: ChainedScanDecoupledLookback.hlsl  ChainedScanDecoupledLookbackDecoupledFallback.hlsl  (+5 more)
GPUPrefixSumsUnity/: package.json
GPUPrefixSumsWGPU/: Cargo.toml
GPUPrefixSumsWebGPUapis/Dawn/: .clang-format  .gitignore  CMakeLists.txt  main.cpp
src/: PrefixSumDispatcher.cs  PrefixSums.compute  ScanBase.cs  TwoKernelBase.cs
(+131 files in other folders)
